# finance-ai

./: .gitignore  404.html  AGENT_WORKFLOW.md  AI_FIRST_ARCHITECTURE.md  AI_FIRST_CHANGES.md  ARCHITECTURE_DIAGRAM.md  DOCUMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  agents.py  app.py  check_db.py  file_scanner.py  finance_db.py  index.html  llm_handler.py  mkdocs.yml  parsers.py  preflight_check.py  pyproject.toml  requirements.txt  setup.sh  sitemap.xml  test_installation.py  utils.py
.github/: README.md  copilot-instructions.md
.github/workflows/: deploy-docs.yml
agent-workflow/: index.html
ai-architecture/: index.html
assets/: style.css
contributing/: index.html
database-schema/: index.html
docs/: AI_FIRST_SUMMARY.md  agent-workflow.md  ai-architecture.md  contributing.md  database-schema.md  faq.md  getting-started.md  index.md  quick-start.md  troubleshooting.md
docs/user-guide/: uploading.md
faq/: index.html
finance_ai/: __init__.py  __main__.py  agents.py  app.py  categorization_agent.py  finance_db.py  llm_handler.py  utils.py
getting-started/: index.html
quick-start/: index.html
scripts/: check_db.py  clean_wrappers.py  preflight_check.py  test_installation.py
search/: search_index.json
troubleshooting/: index.html
user-guide/uploading/: index.html
