[tool.poetry]
name = "finance-ai"
version = "0.1.0"
description = "Offline, AI-first personal finance dashboard (Dash + SQLite, multi-agent workflow)"
authors = ["PhilipNJ <you@example.com>"]
readme = "README.md"
packages = [{ include = "finance_ai" }]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.1"
pandas = "^2.2.2"
plotly = "^5.24.1"
pdfplumber = "^0.11.4"
pytesseract = "^0.3.13"
Pillow = "^10.4.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
pymdown-extensions = "^10.7"
mkdocs-git-revision-date-localized-plugin = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
finance-ai = "finance_ai.app:main"
